--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 :root {
-    --primary: rgb(135, 130, 200);
-    --secondary: #D33F49;
+    --primary: rgb(111, 12, 114);
+    --secondary: rgb(19, 155, 155);
     --light: #fff;
     --dark: #000;
     --diabled: #e7e7e7;
@@ -10,7 +10,7 @@ body {
     font-family: 'Lato', sans-serif;
     margin: 0;
     height: 100vh;
-    background-color: var(--diabled);
+    background-image: url(tareas\ \(2\).jpg);
 }
 
 *:first-letter {
@@ -19,12 +19,14 @@ body {
 
 .roundBorder {
     border-radius: 5px;
+    color: rgb(80, 3, 76);
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .list {
     margin: 25px auto;
     padding: 25px;
-    background-color: var(--light);
+    background-color: rgb(190, 143, 190);
     width: 100%;
     max-width: 350px;
 }
@@ -110,4 +112,11 @@ input:focus {
     background-color: var(--diabled);
     text-decoration: line-through;
     color: var(--dark);
+}
+
+.deleteButton {
+    background-color: rgb(6, 146, 146);
+    margin-inline: 92%;
+    border-radius: 50%;
+    border-color: rgb(6, 146, 146) ;
 }
